windows support. made list_of_files platform agnostic and more robust

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -105,7 +105,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "fc0f1783-cd16-4134-99d5-3e3bf23eb2a2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def get_shp():\n",
@@ -322,11 +326,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "31db0912-0a46-4d74-adc0-3ef4aeb21651",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def list_of_files(folder:str, file_type='.gz'):\n",
@@ -340,7 +340,11 @@
     "        List of all files of file_type within folder\n",
     "    '''\n",
     "\n",
-    "    files = sorted([os.path.join(folder, f) for f in os.listdir(folder) if f.endswith(file_type)])\n",
+    "    folder = Path(folder)\n",
+    "    files = sorted([\n",
+    "        str(f) for f in folder.iterdir()\n",
+    "        if f.is_file() and \"\".join(f.suffixes).lower().endswith(file_type.lower())\n",
+    "    ])\n",
     "    return files"
    ]
   },
@@ -637,9 +641,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "dc251bbb-8564-4920-bcda-c3f8483ae957",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def zonal_climate_analysis(shp_input:str, raster_folder:str, prj_file:str):\n",
@@ -1462,21 +1470,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Enter the path to the shapefile here:  /home/luser/Documents/Grundstücke/grundstuecke/2_206.shp\n"
+      "Enter the path to the shapefile here:  /home/luser/Documents/Temporary/brodo.shp\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Valid shapefile with valid CRS found.\n",
-      "\n"
+      "Valid shapefile with valid CRS found.\n"
      ]
     }
    ],
    "source": [
     "# Get the shapefile to analyze\n",
+    "# /home/luser/Documents/Temporary/brodo.shp\n",
     "\n",
     "shp = get_shp()"
    ]
@@ -1485,14 +1492,40 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "1142e3bc-5a8d-4932-8100-4d7321ad4174",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "All files are already downloaded.\n"
+      "Download the data:\n",
+      "Download the PDF files containing informations about the DWD data:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████| (35/35) Downloading files.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download the Rasterfiles:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████| (1298/1298) Downloading files.\n"
      ]
     }
    ],
@@ -1520,22 +1553,26 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "8e7059d7-f75d-42fb-b836-8036f0f71770",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Process the Data:\n",
-      "Files are already decompressed\n",
-      "Files are already transformed to the right format.\n"
+      "Process the data:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "100%|████████████████████████████████████████| (1298/1298) Decompressing files.\n",
+      "100%|████████████████████████████████████████| (1298/1298) Transforming files to the right format.\n",
       "100%|████████████████████████████████████████| (1298/1298) Calculating rasterstats.\n"
      ]
     }
@@ -1575,8 +1612,20 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "fde3b490-ab04-4492-8772-9ff1b4adb8bc",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Creating Map and Plots:\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1589,20 +1638,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Creating Map and Plots:\n",
-      "Successfully created and saved map: 2_206_map.html\n",
-      "Successfully created and saved plot: 2_206_min_mean_max_temp_plot.png\n",
-      "Successfully created and saved plot: 2_206_ice_frost_days_plot.png\n",
-      "Successfully created and saved plot: 2_206_snowcover_days_plot.png\n",
-      "Successfully created and saved plot: 2_206_summer_hot_days_plot.png\n",
-      "Successfully created and saved plot: 2_206_precipitation_drought_plot.png\n",
-      "Successfully created and saved plot: 2_206_precip_days_plot.png\n",
-      "Successfully created and saved plot: 2_206_sunshine_duration_plot.png\n",
-      "Successfully created and saved plot: 2_206_vegetativ_phase_plot.png\n",
-      "Successfully created and saved plot: 2_206_vegetativ_phase_len_plot.png\n",
+      "Successfully created and saved map: brodo_map.html\n",
+      "Successfully created and saved plot: brodo_min_mean_max_temp_plot.png\n",
+      "Successfully created and saved plot: brodo_ice_frost_days_plot.png\n",
+      "Successfully created and saved plot: brodo_snowcover_days_plot.png\n",
+      "Successfully created and saved plot: brodo_summer_hot_days_plot.png\n",
+      "Successfully created and saved plot: brodo_precipitation_drought_plot.png\n",
+      "Successfully created and saved plot: brodo_precip_days_plot.png\n",
+      "Successfully created and saved plot: brodo_sunshine_duration_plot.png\n",
+      "Successfully created and saved plot: brodo_vegetativ_phase_plot.png\n",
+      "Successfully created and saved plot: brodo_vegetativ_phase_len_plot.png\n",
       "\n",
       "Finished!\n",
+      "\n",
       "Map and plots are saved here: \n",
       "/home/luser/Documents/Code/ZonalClimateAnalyzer/output\n",
       "\n"
@@ -1653,7 +1701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
