windows support. made zonal_climate_analysis function list of files platform agnostic and more robust

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "e57ced7c-8cb8-4d42-9799-5578dc44c5c9",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Import Packages\n",
@@ -644,11 +648,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "dc251bbb-8564-4920-bcda-c3f8483ae957",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def zonal_climate_analysis(shp_input:str, raster_folder:str, prj_file:str):\n",
@@ -712,7 +712,7 @@
     "\n",
     "    # Combine rasterstats and the name of the raster the stats are calculated with\n",
     "    raster_path = str(Path.cwd() / 'climate_environment_CDC_grids_germany_annual')\n",
-    "    filenames = filenames = [fn.replace(raster_path + '/', '').replace('.tif', '') for fn in files_tif] # Ceate list with filenames without path and type  \n",
+    "    filenames = [Path(fn).with_suffix('').name for fn in files_tif] # Ceate list with filenames without path and type  \n",
     "\n",
     "    # Delete deprecated files\n",
     "    delete_raster_files(raster_path)\n",
@@ -1613,7 +1613,11 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "fde3b490-ab04-4492-8772-9ff1b4adb8bc",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
