windows support. set utf-8 encoding when readuing and writing files

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -411,10 +411,10 @@
     "        print(f'Filetype is already {ft_ext}, no decompression needed')\n",
     "\n",
     "    elif ft_ext == 'gz':\n",
-    "        decompressed_file = Path(rename_dwd_file(file))         # Name for output file\n",
-    "        with gzip.open(file, mode='rb') as f_in:                # Open .gz file and decompress it\n",
-    "            with open(decompressed_file, mode='wb') as f_out:   # Create decompressed file\n",
-    "                shutil.copyfileobj(f_in, f_out)                 # Copy content of compressed file to decompressed file\n",
+    "        decompressed_file = Path(rename_dwd_file(file))            # Name for output file\n",
+    "        with gzip.open(file, mode='rb') as f_in:                   # Open .gz file and decompress it\n",
+    "            with open(decompressed_file, mode='wb') as f_out:      # Create decompressed file\n",
+    "                shutil.copyfileobj(f_in, f_out)                    # Copy content of compressed file to decompressed file\n",
     "\n",
     "    # Unpack the mis‑labelled “…asc.gz” archive (which is really a ZIP)\n",
     "    elif ft_ext == 'zip':\n",
@@ -463,7 +463,7 @@
     "    \"\"\"\n",
     "\n",
     "    # CRS from .prj_file\n",
-    "    with open(prj_file, 'r') as f:\n",
+    "    with open(prj_file, 'r', encoding='utf-8') as f:\n",
     "        prj_txt = f.read()\n",
     "    crs = CRS.from_wkt(prj_txt)\n",
     "\n",
@@ -544,7 +544,7 @@
     "    \"\"\"\n",
     "\n",
     "    # CRS from .prj_file\n",
-    "    with open(prj_file, 'r') as f:\n",
+    "    with open(prj_file, 'r', encoding='utf-8') as f:\n",
     "        prj_txt = f.read()\n",
     "\n",
     "    target_crs = CRS.from_wkt(prj_txt)\n",
@@ -648,7 +648,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "dc251bbb-8564-4920-bcda-c3f8483ae957",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def zonal_climate_analysis(shp_input:str, raster_folder:str, prj_file:str):\n",
@@ -737,7 +741,7 @@
     "    shp_name = path_to_shp.name\n",
     "    json_output_path_name = shp_name.replace('.shp','')+'_rasterstats.json'\n",
     "    \n",
-    "    with open(json_output_path_name, 'w') as rs_json:\n",
+    "    with open(json_output_path_name, 'w', encoding='utf-8') as rs_json:\n",
     "        json.dump(rasterstats_json, rs_json)\n",
     "\n",
     "    return json_output_path_name, shp_crs_dissolved"
