windows support. list_of_dwd_data filendings now .lower to avoid case sensitivity errors

--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -106,11 +106,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "fc0f1783-cd16-4134-99d5-3e3bf23eb2a2",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_shp():\n",
@@ -204,11 +200,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "f5116a7f-4b48-43f7-b958-8e7cf1ac6081",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def list_of_dwd_data(file_types=['.asc.gz', '.pdf', '.zip']):\n",
@@ -262,7 +254,7 @@
     "        found = [\n",
     "            location + a['href']\n",
     "            for a in soup.find_all('a', href=True)\n",
-    "            if a['href'].endswith(tuple(file_types))\n",
+    "            if a['href'].lower().endswith(tuple(file_types))\n",
     "        ]\n",
     "        links.append(found)\n",
     "\n",
@@ -327,11 +319,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "31db0912-0a46-4d74-adc0-3ef4aeb21651",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def list_of_files(folder:str, file_type='.gz'):\n",
@@ -357,11 +345,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "cd39d8d3-99a1-40fc-9350-eda11edfe561",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def rename_dwd_file(file:str):\n",
@@ -648,11 +632,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "dc251bbb-8564-4920-bcda-c3f8483ae957",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def zonal_climate_analysis(shp_input:str, raster_folder:str, prj_file:str):\n",
