--- a/ZonalClimateAnalyzer.ipynb
+++ b/ZonalClimateAnalyzer.ipynb
@@ -427,11 +427,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "e1d7ef3b-0b3d-428d-bd3c-9debb017b865",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def asc_to_tif_add_crs(asc_input:str, prj_txt:str):\n",
@@ -447,9 +443,9 @@
     "    \"\"\"\n",
     "\n",
     "    # CRS from .prj_file\n",
-    "    with open(prj_file, 'r', encoding='utf-8') as f:\n",
-    "        prj_txt = f.read()\n",
-    "    crs = CRS.from_wkt(prj_txt)\n",
+    "    with open(prj_txt, 'r', encoding='utf-8') as f:\n",
+    "        wkt = f.read()\n",
+    "    crs = CRS.from_wkt(wkt)\n",
     "\n",
     "    # Read the .asc file\n",
     "    with rasterio.open(asc_input) as src:\n",
@@ -508,11 +504,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "55748775-bea6-483a-926b-18bef2b976d3",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def change_shp_crs(shp_input:str, prj_txt:str):\n",
@@ -528,10 +520,9 @@
     "    \"\"\"\n",
     "\n",
     "    # CRS from .prj_file\n",
-    "    with open(prj_file, 'r', encoding='utf-8') as f:\n",
-    "        prj_txt = f.read()\n",
-    "\n",
-    "    target_crs = CRS.from_wkt(prj_txt)\n",
+    "    with open(prj_txt, 'r', encoding='utf-8') as f:\n",
+    "        wkt = f.read()\n",
+    "    target_crs = CRS.from_wkt(wkt)\n",
     "\n",
     "    # Read Shapefile\n",
     "    gdf = gpd.read_file(shp_input)\n",
